# Trader-Suit

./: .env  .env.example  .gitattributes  AGENTS.md  API_Connectors.md  API_Connectors_Plan.md  ARCHITECTURE.md  ARCHITECTURE_ADJUSTMENT_PLAN.md  AUTONOMOUS_AGENT_REQUIREMENT.md  AUTONOMOUS_CONNECTORS_TESTER_REQUIREMENT.md  Actor_critic_logs.md  Agent_interfaces_loader.md  Agent_skill.md  Alpaca-and-MT5-Connector-Setup.md  Alpaca_API_docs.md  Alpha-Eq-vs-FX forwards.md  CONNECTORS_IMPLEMENTATION_GUIDE.md  CUDA_IMPLEMENTATION_PLAN.md  Complaince.md  Dockerfile  IDENTITY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_1_April_26.md  IMPLEMENTATION_PLAN_AGENT_AND_MONTE_CARLO.md  Intelligence Layer.md  Manage_colab.md  Monte carlo.md  New_UI_requirements.md  OpenClaw_architect.md  PROJECT_MODELS_AND_FLOW.md  Paradigms.md  Post_Intelligence_Tasks.md  README.md  SOUL.md  Status-Feb-18.md  TECHNICAL_SPECS_ANALYSIS_AND_PLAN.md  TOOLS.md  Technical_specs_gemini.md  Trader_Workbench_Tasks.md  UI_Implementation_Gap.md  (+27 more)
.cursor/rules/: colab-remote.mdc
.github/workflows/: ci.yml
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Logs/: Risk_Audit_20260219_141536.md  Risk_Audit_20260219_141810.md  Risk_Audit_20260219_142049.md  Risk_Audit_20260219_162902.md  Risk_Audit_20260219_163136.md  Risk_Audit_20260219_163411.md  Risk_Audit_20260219_163653.md  Risk_Audit_20260219_163929.md  Risk_Audit_20260219_164056.md  Risk_Audit_20260219_164141.md  Risk_Audit_20260219_164215.md  Risk_Audit_20260219_164314.md  Risk_Audit_20260219_164345.md  Risk_Audit_20260219_164348.md  Risk_Audit_20260219_164419.md  Risk_Audit_20260219_164437.md  Risk_Audit_20260219_164506.md  Risk_Audit_20260219_164607.md  Risk_Audit_20260219_164640.md  Risk_Audit_20260219_164643.md  Risk_Audit_20260219_164713.md  Risk_Audit_20260219_164728.md  Risk_Audit_20260219_164753.md  Risk_Audit_20260219_164848.md  Risk_Audit_20260219_164927.md  Risk_Audit_20260219_164930.md  Risk_Audit_20260219_164958.md  Risk_Audit_20260219_165014.md  Risk_Audit_20260219_165031.md  Risk_Audit_20260219_165125.md  Risk_Audit_20260219_165212.md  Risk_Audit_20260219_165215.md  Risk_Audit_20260219_165248.md  Risk_Audit_20260219_165305.md  Risk_Audit_20260219_165321.md  Risk_Audit_20260219_165414.md  Risk_Audit_20260219_165507.md  Risk_Audit_20260219_165511.md  Risk_Audit_20260219_165546.md  Risk_Audit_20260219_165605.md  (+794 more)
AI_Employee_Vault/Needs_Action/: RESEARCH_Actor_critic_models.md  idea_wf_97ebeef3.md  idea_wf_c2947098.md
AI_Employee_Vault/Research_Data/: Actor_critic_models.md
DataStore/: alphas.json  workflow_state.json
Dataset-Testing-US30/: EURUSD_Ticks_17.11.2025-17.11.2025.csv  usa30idxusd-2025-03-19-2025-03-20-m1.csv  usa30idxusd-m5-bid-2025-10-09-2025-11-29.csv
Different_Edges/: Additional AI-Enhanced Edges.md  Geopolitical and Multipolar Edges.md  IMPLEMENTATION_PLAN.md  Market Structure Edges.md  Pattern-Based Edges.md  Prediction and Event-Based Edges.md  Statistical_approach.md  Tokenized Asset Edges.md  Volume-Based Edges.md
agentfactory-main/agentfactory-main/libs/api-infra/: project.json  pyproject.toml
agentfactory-main/agentfactory-main/libs/api-infra/src/api_infra/: auth.py
agentfactory-main/agentfactory-main/libs/api-infra/src/api_infra/core/: __init__.py  rate_limit.py  redis_cache.py
agentfactory-main/agentfactory-main/libs/api-infra/tests/: conftest.py  test_auth.py  test_rate_limit.py  test_redis_cache.py
claude_alpha_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
colab/: CONNECT_COLAB_SSH.md  README.md  requirements-colab.txt  run_rl_dl_ml_colab.ipynb  setup_colab.ipynb  us30_dxy_equity_vs_fx.ipynb  us30_model_research.ipynb
connectors_tester/: .env.example  main.py  requirements.txt
database/: schema.sql  schema_actor_critic.sql
docs/: ACTOR_CRITIC_SPECS.md  DEPLOYMENT.md  UI_Design_Best_Practices.md  architecture_explorer.html
src/: deployment_optimization.py
tests/: __init__.py  test_advanced_connector.py  test_connectors.py  test_monte_carlo_pro.py  test_us_session_backtest.py
(+170 files in other folders)
