[project]
name = "claude-alpha-research"
version = "0.1.0"
description = "Autonomous Alpha Research & Execution FTE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "asyncpg",
    "anthropic",
    "python-dotenv",
    "pytest",
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "plotly",
    "requests",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest"]
# Connectors: alpaca works everywhere; MT5 is Windows-only (on WSL use a bridge)
connectors = ["alpaca-py", "MetaTrader5"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.api", "src.dashboard", "src.agents", "src.watchers", "src.tools", "src.models", "src.connectors", "src.edges", "src.memory", "src.gateway", "src.orchestration", "src.backtest", "src.ml", "src.data", "src.db", "src.prompt", "src.mcp"]

[tool.uv]
dev-dependencies = []

[tool.fastapi.run]
app = "main:app"
