[project]
name = "claude-alpha-research"
version = "0.1.0"
description = "Autonomous Alpha Research & Execution FTE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "asyncpg",
    "google-generativeai",
    "python-dotenv",
    "pytest",
    "fastapi",
    "uvicorn[standard]",
    "streamlit>=1.30",
    "plotly",
    "httpx",
    "pydantic>=2.0",
    # pandas-ta removed — using local pandas_ta_classic (Technical Indicators/pandas-ta-classic-main/)
    "yfinance",
    "shap",
]

[project.optional-dependencies]
dev = ["pytest"]
# Connectors: alpaca works everywhere; MT5 is Windows-only (on WSL use a bridge)
connectors = ["alpaca-py", "MetaTrader5"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.api", "src.dashboard", "src.agents", "src.watchers", "src.tools", "src.models", "src.connectors", "src.edges", "src.memory", "src.gateway", "src.orchestration", "src.backtest", "src.ml", "src.data", "src.db", "src.prompt", "src.mcp"]

[tool.uv]
dev-dependencies = ["pytest", "pytest-asyncio", "ruff"]

[tool.fastapi.run]
app = "main:app"
